--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   </head>
   <body>
     <div>
-    test
+      <p id="test"></p>
     </div>
+    <script>
+      document.getElementbyId('test').innerHTML = "Inserito con Javascript";
+    </scrip>
   </body>
 </body>
