--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <p id="test"></p>
     </div>
     <script>
-      document.getElementbyId('test').innerHTML = "Inserito con Javascript";
-    </scrip>
+      document.getElementById('test').innerHTML = 'Inserito con Javascript';
+    </script>
   </body>
 </body>
